--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@mantine/core": "^7.6.1",
+    "@mantine/form": "^7.7.0",
     "@mantine/hooks": "^7.6.1",
+    "@mantinex/dev-icons": "^1.0.2",
+    "@mantinex/mantine-logo": "^1.0.1",
     "@tabler/icons-react": "^2.47.0",
+    "devicon": "^2.16.0",
+    "formik": "^2.4.5",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
