--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"nodemon index",
+    "start":"node index"
+    
   },
   "keywords": [],
   "author": "",
@@ -12,7 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.1",
-    "mongoose": "^8.2.3",
+    "mongoose": "^8.2.4",
     "nodemon": "^3.1.0"
   }
 }
