--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "devicon": "^2.16.0",
     "formik": "^2.4.5",
     "next": "14.1.3",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "yup": "^1.4.0"
