--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
     "@mantine/hooks": "^7.6.1",
     "@mantinex/dev-icons": "^1.0.2",
     "@mantinex/mantine-logo": "^1.0.1",
+    "@monaco-editor/react": "^4.6.0",
     "@tabler/icons-react": "^2.47.0",
     "devicon": "^2.16.0",
     "formik": "^2.4.5",
+    "js-to-ts-converter": "^0.18.2",
     "next": "14.1.3",
     "notistack": "^3.0.1",
     "react": "^18",
