--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mantinex/mantine-logo": "^1.0.1",
     "@monaco-editor/react": "^4.6.0",
     "@tabler/icons-react": "^2.47.0",
+    "@uiw/react-md-editor": "^4.0.4",
     "devicon": "^2.16.0",
     "formik": "^2.4.5",
     "js-to-ts-converter": "^0.18.2",
