--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,9 @@
     "@mantinex/dev-icons": "^1.0.2",
     "@mantinex/mantine-logo": "^1.0.1",
     "@monaco-editor/react": "^4.6.0",
+    "@nivo/bar": "^0.85.1",
+    "@nivo/line": "^0.85.1",
+    "@nivo/pie": "^0.85.1",
     "@tabler/icons-react": "^2.47.0",
     "@uiw/react-md-editor": "^4.0.4",
     "devicon": "^2.16.0",
