--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@editorjs/checklist": "^1.6.0",
     "@editorjs/editorjs": "^2.29.1",
     "@editorjs/header": "^2.8.1",
+    "@editorjs/image": "^2.9.0",
     "@editorjs/list": "^1.9.0",
+    "@editorjs/quote": "^2.6.0",
+    "@editorjs/table": "^2.3.0",
     "@mantine/core": "^7.6.1",
     "@mantine/form": "^7.7.0",
     "@mantine/hooks": "^7.6.1",
