--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mantinex/mantine-logo": "^1.0.1",
     "@monaco-editor/react": "^4.6.0",
     "@nivo/bar": "^0.85.1",
+    "@nivo/calendar": "^0.85.1",
     "@nivo/line": "^0.85.1",
     "@nivo/pie": "^0.85.1",
     "@tabler/icons-react": "^2.47.0",
