--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@nivo/pie": "^0.85.1",
     "@tabler/icons-react": "^2.47.0",
     "@uiw/react-md-editor": "^4.0.4",
+    "axios": "^1.6.8",
     "child_process": "^1.0.2",
     "devicon": "^2.16.0",
     "formik": "^2.4.5",
