--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "child_process": "^1.0.2",
     "devicon": "^2.16.0",
     "formik": "^2.4.5",
+    "framer-motion": "^11.1.7",
     "js-to-ts-converter": "^0.18.2",
     "next": "14.1.3",
     "notistack": "^3.0.1",
