--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,11 +34,13 @@
     "devicon": "^2.16.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.1.7",
+    "javascript-time-ago": "^2.5.10",
     "js-to-ts-converter": "^0.18.2",
     "next": "14.1.3",
     "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-time-ago": "^7.3.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
